--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
 	"dependencies": {
 		"@iconify/svelte": "^4.2.0",
 		"@supabase/ssr": "^0.5.2",
-		"@supabase/supabase-js": "^2.48.0"
+		"@supabase/supabase-js": "^2.48.0",
+		"svelte-file-dropzone": "^2.0.9"
 	}
 }
