--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
 		"@iconify/svelte": "^4.2.0",
 		"@supabase/ssr": "^0.5.2",
 		"@supabase/supabase-js": "^2.48.0",
+		"openai": "^4.82.0",
 		"svelte-file-dropzone": "^2.0.9"
 	}
 }
